overflow fixed

--- a/css/payment.css
+++ b/css/payment.css
@@ -107,6 +107,14 @@
 }
 
 @media only screen and (max-width: 800px) {
+  html, body {
+    overflow-x: hidden;
+  }
+  body {
+    position: relative
+  }
+  
+
   .col-left-payment {
     margin-bottom: 40px;
     height: 70vh;
